k8s/interval-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interval-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: interval
  template:
    metadata:
      labels:
        component: interval
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: google-credentials
      containers:
      - name: interval
        image: stevenesuh/vinegar-interval
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
