k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: google-credentials
      containers:
      - name: server
        image: stevenesuh/vinegar-server
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        ports:
        - containerPort: 5000
        - containerPort: 3000
