k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: google-credentials
      containers:
      - name: worker
        image: stevenesuh/vinegar-worker
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
