k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/permanent-redirect-code: '301'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.org/use-forwarded-headers: 'true'
    nginx.org/use-proxy-protocol: 'true'
    nginx.org/http-redirect-code: '301'
spec:
  tls:
    - hosts:
        - joinvinegar.com
        - www.joinvinegar.com
      secretName: joinvinegar-com
  rules:
    - host: joinvinegar.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 8080
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
          - path: /ws/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 3000
    - host: www.joinvinegar.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 8080
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
          - path: /ws/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 3000
